test_output_2.txt
warning: unused variable: `post_shader`
   --> astraweave-render\src\renderer.rs:729:13
    |
729 |         let post_shader = device.create_shader_module(wgpu::ShaderMod...
    |             ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_post_shader`
    |
    = note: `#[warn(unused_variables)]` on by default

warning: `astraweave-render` (lib) generated 1 warning
   Compiling astraweave-render v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-render)
error[E0433]: failed to resolve: could not find `Maintain` in `wgpu`
   --> astraweave-render\tests\coverage_booster_render.rs:145:34
    |
145 |     renderer.device().poll(wgpu::Maintain::Wait);
    |                                  ^^^^^^^^ could not find `Maintain` in `wgpu`

warning: unused imports: `CullingResources`, `DecalSystem`, `Decal`, `DeferredRenderer`, `LODConfig`, `MaterialLayerDesc`, `MaterialPackDesc`, `Mesh`, `SimplificationMesh`, `SkyMode`, `TimeOfDay`, `Vertex`, `WeatherType`, `advanced_post::AdvancedPostFx`, `msaa::MsaaMode`, and `water::WaterRenderer`
  --> astraweave-render\tests\coverage_booster_render.rs:4:41
   |
4  |     deferred::{GBuffer, GBufferFormats, DeferredRenderer},
   |                                         ^^^^^^^^^^^^^^^^
5  |     gi::vxgi::{VxgiConfig, VxgiRenderer},
6  |     ibl::{IblManager, IblQuality, SkyMode},
   |                                   ^^^^^^^
...
10 |     types::{Instance, Mesh, Vertex, SkinnedVertex},
   |                       ^^^^  ^^^^^^
11 |     WeatherType,
   |     ^^^^^^^^^^^
12 |     environment::{SkyRenderer, SkyConfig, TimeOfDay, WeatherSystem},
   |                                           ^^^^^^^^^
13 |     effects::{WeatherFx, WeatherKind},
14 |     msaa::MsaaMode,
   |     ^^^^^^^^^^^^^^
15 |     material::{MaterialLoadStats, MaterialManager, MaterialLayerDesc, MaterialPackDesc},
   |                                                    ^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^
...
18 |     culling::{InstanceAABB, FrustumPlanes, CullingPipeline, CullingResources},
   |                                                             ^^^^^^^^^^^^^^^^
...
21 |     decals::{DecalSystem, Decal},
   |              ^^^^^^^^^^^  ^^^^^
22 |     water::WaterRenderer,
   |     ^^^^^^^^^^^^^^^^^^^^
23 |     lod_generator::{LODGenerator, LODConfig, SimplificationMesh},
   |                                   ^^^^^^^^^  ^^^^^^^^^^^^^^^^^^
24 |     advanced_post::AdvancedPostFx,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: unused import: `astraweave_cinematics as awc`
  --> astraweave-render\tests\coverage_booster_render.rs:30:5
   |
30 | use astraweave_cinematics as awc;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::collections::HashMap`
  --> astraweave-render\tests\coverage_booster_render.rs:34:5
   |
34 | use std::collections::HashMap;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused variable: `forward`
   --> astraweave-render\tests\coverage_booster_render.rs:213:13
    |
213 |     let mut forward = ClusteredForwardRenderer::new(&device, ClusterConfig::default());
    |             ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_forward`
    |
    = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `streaming`
   --> astraweave-render\tests\coverage_booster_render.rs:222:13
    |
222 |     let mut streaming = TextureStreamingManager::new(100); // 100MB
    |             ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_streaming`

warning: variable does not need to be mutable
   --> astraweave-render\tests\coverage_booster_render.rs:213:9
    |
213 |     let mut forward = ClusteredForwardRenderer::new(&device, ClusterConfig::default());
    |         ----^^^^^^^
    |         |
    |         help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` on by default

warning: variable does not need to be mutable
   --> astraweave-render\tests\coverage_booster_render.rs:222:9
    |
222 |     let mut streaming = TextureStreamingManager::new(100); // 100MB
    |         ----^^^^^^^^^
    |         |
    |         help: remove this `mut`

warning: unused variable: `input_tex`
   --> astraweave-render\tests\coverage_booster_render.rs:637:9
    |
637 |     let input_tex = device.create_texture(&tex_desc).create_view(&Default::default());
    |         ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_input_tex`

warning: unused variable: `output_tex`
   --> astraweave-render\tests\coverage_booster_render.rs:638:9
    |
638 |     let output_tex = device.create_texture(&tex_desc).create_view(&Default::default());
    |         ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_output_tex`

warning: unused variable: `velocity_tex`
   --> astraweave-render\tests\coverage_booster_render.rs:639:9
    |
639 |     let velocity_tex = device.create_texture(&tex_desc).create_view(&Default::default());
    |         ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_velocity_tex`

warning: unused variable: `depth_tex`
   --> astraweave-render\tests\coverage_booster_render.rs:640:9
    |
640 |     let depth_tex = device.create_texture(&wgpu::TextureDescriptor {
    |         ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_depth_tex`

warning: unused variable: `culling_res`
   --> astraweave-render\tests\coverage_booster_render.rs:717:9
    |
717 |     let culling_res = culling.create_culling_resources(&device, &[aabb], &frustum);
    |         ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_culling_res`

warning: unused variable: `ibl`
   --> astraweave-render\tests\coverage_booster_render.rs:763:13
    |
763 |     let mut ibl = IblManager::new(&device, IblQuality::High).unwrap();
    |             ^^^ help: if this is intentional, prefix it with an underscore: `_ibl`

warning: variable does not need to be mutable
   --> astraweave-render\tests\coverage_booster_render.rs:719:9
    |
719 |     let mut cull_encoder = device.create_command_encoder(&wgpu::CommandEncoderDescriptor::default());
    |         ----^^^^^^^^^^^^
    |         |
    |         help: remove this `mut`

warning: variable does not need to be mutable
   --> astraweave-render\tests\coverage_booster_render.rs:763:9
    |
763 |     let mut ibl = IblManager::new(&device, IblQuality::High).unwrap();
    |         ----^^^
    |         |
    |         help: remove this `mut`

warning: variable does not need to be mutable
   --> astraweave-render\tests\coverage_booster_render.rs:766:9
    |
766 |     let mut ibl_encoder = device.create_command_encoder(&wgpu::CommandEncoderDescriptor::default());
    |         ----^^^^^^^^^^^
    |         |
    |         help: remove this `mut`

For more information about this error, try `rustc --explain E0433`.
warning: `astraweave-render` (test "coverage_booster_render") generated 16 warnings
error: could not compile `astraweave-render` (test "coverage_booster_render") due to 1 previous error; 16 warnings emitted
